// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "default_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": true,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": true,
      "id": "properties.disabled: true_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},{\\"border\\":\\"1px solid red\\",\\"fontSize\\":\\"25px\\"}]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.inputStyle: CSS style applied_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 5 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.label span: 5_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Please enter a number between 10 and 250 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.placeholder: Please enter a number between 10 and 250_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": "Please enter a number between 10 and 250",
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.size: large_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": "large",
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.size: small_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": "small",
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "properties.title_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.decimalSeparator: "," - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": ",",
      "disabled": undefined,
      "id": "property.decimalSeparator: \\",\\"_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.max: 250 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "property.max: 250_input",
      "max": 250,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.min: 10 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "property.min: 10_input",
      "max": Infinity,
      "min": 10,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.precision: 1 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "property.precision: 1_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 1,
      "size": undefined,
      "step": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - property.step: 3 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "autoComplete": "off",
      "autoFocus": undefined,
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "decimalSeparator": undefined,
      "disabled": undefined,
      "id": "property.step: 3_input",
      "max": Infinity,
      "min": -Infinity,
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "precision": 0,
      "size": undefined,
      "step": 3,
      "value": null,
    },
    Object {},
  ],
]
`;
